syntax = "proto3";

package films;

import "google/protobuf/timestamp.proto";

// Сообщение для создания нового фильма через gRPC
message CreateFilmRequest {
  string title = 1;
  string original_title = 2;
  string overview = 3;
  google.protobuf.Timestamp release_date = 4;
  string original_language = 5;
  int32 themoviedb_id = 6;
}

// Сообщение для ответа (можно возвращать созданный фильм)
message FilmResponse {
  int32 id = 1;
  string title = 2;
  string original_title = 3;
  string overview = 4;
  google.protobuf.Timestamp release_date = 5;
  string original_language = 6;
  int32 themoviedb_id = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}

// gRPC сервис фильмов
service FilmsService {
  // Метод создания нового фильма
  rpc CreateFilm(CreateFilmRequest) returns (FilmResponse);
}
